completed the js of about and about itself

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <!--navigation bar-->
-    <div class="intro">
-        <nav class="navbar navigIntro">
+    <nav class="navbar navigIntro">
         <div class="container-fluid">
             <div class="navbar-header">
                 <span class="icon-bar"></span>
@@ -22,18 +21,44 @@
             <a class="navbar-brand" href="">Greenside</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a class="navBut" href="">ABOUT</a></li>
-                <li><a class="navBut" href="">SERVICES</a></li>
-                <li><a class="navBut" href="">GALLERY</a></li>
-                <li><a class="navBut" href="">TESTIMONIALS</a></li>
-                <li><a class="navBut" href="">CONTACT</a></li>
+                <li><a id="about" class="navBut" href="">ABOUT</a></li>
+                <li><a id="" class="navBut" href="">SERVICES</a></li>
+                <li><a id="" class="navBut" href="">GALLERY</a></li>
+                <li><a id="" class="navBut" href="">TESTIMONIALS</a></li>
+                <li><a id="" class="navBut" href="">CONTACT</a></li>
             </ul>
         </div>
         </nav>
+    <div class="intro">
+        
         <div class="mainTitle" style="margin-top:0"><h1>Lawn &amp Garden Services</h1></div>
         <div class="mainSub"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 Duis sed dapibus leo nec ornare diam.</span></div>
         <div class="mainBut"><button type="button" class="btn btn-success">MORE INFO</button></div>
+    </div>
+    <!--about-->
+    <div class="about">
+        <div class="whatDo">
+            <h1 style="margin:0;">What We Do</h1>
+            <div class="underLine"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
+            <div class="aboutBut"><button type="button" class="btn btn-success">OUR SERVICES</button></div>
+        </div>
+        <div class="grassCut">
+            <img src="img/grassCutter.jpg" alt="grassCutter">
+        </div>
+        <div class="aboutDesc">
+            <div class="aboutDescItem">
+                <h2 style="margin:0">Who We Are</h2>
+                <div class="underLine"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam.</p>
+            </div>
+            <div class="aboutDescItem">
+                <h2 style="margin:0">Who We Are</h2>
+                <div class="underLine"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam.</p>
+            </div>
+        </div>
     </div>
 
 
